--- a/src/Components/ShowPhotos/ShowPhotos.css
+++ b/src/Components/ShowPhotos/ShowPhotos.css
@@ -30,3 +30,22 @@
   font-size: 16px;
   padding: 10px;
 }
+
+@media screen and (max-width: 500px) {
+  .photos {
+    width: 96%;
+    margin: 0 auto;
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+}
+
+@media screen and (min-width: 501px) and (max-width: 840px) {
+  .photos {
+    width: 96%;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+  }
+}
