--- a/src/Components/ShowPosts/Posts.css
+++ b/src/Components/ShowPosts/Posts.css
@@ -39,3 +39,25 @@ h1 {
   font-size: 16px;
   text-align: justify;
 }
+
+@media screen and (max-width: 500px) {
+  .posts {
+    width: 96%;
+    margin: 0 auto;
+    grid-template-columns: 1fr;
+    grid-gap: 0px;
+    grid-row-gap: 20px;
+    padding: 0;
+  }
+}
+
+@media screen and (min-width: 501px) and (max-width: 840px) {
+  .posts {
+    width: 96%;
+    margin: 0 auto;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+
+    padding: 0;
+  }
+}
