--- a/src/Components/ShowPosts/Posts.css
+++ b/src/Components/ShowPosts/Posts.css
@@ -45,7 +45,7 @@ h1 {
   width: 100vw;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
 }
 
 @media screen and (max-width: 500px) {
